# wxMP3Player

./: CMakeLists.txt  README.md
include/: App.h  Frame.h  MenuBar.h  Menubar.h  MusicControl.h  MusicControls.h  SongList.h  UpdateGauge.h
src/: App.cpp  Frame.cpp  MenuBar.cpp  Menubar.cpp  MusicControl.cpp  MusicControls.cpp  SongList.cpp  UpdateGauge.cpp
