CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(wxMP3Player)

SET(wxWidgets_CONFIGURATION mswu)

FIND_PACKAGE(wxWidgets COMPONENTS core base REQUIRED)
INCLUDE("${wxWidgets_USE_FILE}")

AUX_SOURCE_DIRECTORY(./src/ SRC)
INCLUDE_DIRECTORIES(./include/ INCLUDE)

ADD_EXECUTABLE(
	${PROJECT_NAME}
	${SRC}
)

TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}
	${wxWidgets_LIBRARIES}
)
